[tool.poetry]
name = "reassesslib"
version = "1.0"
description = ""
authors = ["Andrew Elliott <andrew.elliott@glasgow.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
numpy = "^1.23"
scipy = "^1.11"
matplotlib = "^3.7"
seaborn = "^0.12"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
